# A2CBotRust

./: Cargo.toml  LICENSE
src/: lib.rs
src/fun/: bonk.rs
src/mod_tools/: mod.rs  slow_mode.rs
src/structs/: app_data.rs  clap_args.rs  config.rs  discord_command.rs  handler.rs  mod.rs
src/utils/: constants.rs
