[package]
name = "s"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.25"
serde = { version = "1", features = ["serde_derive"] }
serde_yml = "0.0.12"
serenity = "0.12.4"
strum = { version = "0.27.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
